  - 'Priority' and 'Importance' headers are now also recognised, next to the
    'X-Priority' header that we've supported since a long time. Fixes #1039935.
  - Handle a reload of the signout page gracefully: do not present an error
    about having to be logged in to be able to sign out. Fixes #1070069.
  - Prevent & being eaten in set_url_var, thanks Marcin Orlowski. Fixes #1053725.

Version 1.5.0
--------------------
  - Added new preference that determines cursor focus when replying
  - Added support in conf.pl for MS cls command.
  - conf.pl changes for relative paths outside the SM tree (#715119).
  - conf.pl changes for delete_folder restrictions with Courier-IMAP and
    UW-IMAP (#715550).
  - Fixed code to allow for \ in password/username (#718116).
  - Added mailto: support for Windows clients.  See
    contrib/squirrelmail.mailto.reg
  - Added lowsrc to the list of attributes to be removed.
  - Fixed message highlighting for To, CC and From and
    for RFC1522 headers (bug #719564)
  - Fixed incorrect folding inside message-id's
  - Fix for Folders being listed in create/remove/rename operations
    (#725443, #722823, #729225)
  - Fix for bad attachment view link (#697381, #729295)
  - Fix comp_in_new in search and addressbook not having right parameters (#731768).
  - Fix max attachment filesize off by factor 10 when ini_var set in bytes (#730742).
  - Fix for parsing fetch results. We are now able to extract the UID if it's
    returned after the header.
  - Remove obsoleted parsing functions.
  - Fixed language bug in posting on modifying/deleting servers on mail_fetch plugin
    (#742705).
  - Fixed infinite loop in parseAddress on invalid mailaddress (#742584).
  - Rewrote ugly "Not a very useful errormessage" to something more friendly.
  - Make central function for compose links to make sure compose_in_new always
    works the same way.
  - Fix that when JavaScript off, compose in new was broken (#749654).